feat: map none-standard code to standard