@@ -5,6 +5,7 @@ import static org.miracum.etl.fhirtoomop.Constants.CONCEPT_NO_MATCHING_CONCEPT;
 import static org.miracum.etl.fhirtoomop.Constants.OMOP_DOMAIN_CONDITION;
 import static org.miracum.etl.fhirtoomop.Constants.OMOP_DOMAIN_DRUG;
 import static org.miracum.etl.fhirtoomop.Constants.OMOP_DOMAIN_OBSERVATION;
+import static org.miracum.etl.fhirtoomop.Constants.OMOP_DOMAIN_PROCEDURE;
 import static org.miracum.etl.fhirtoomop.Constants.SOURCE_VOCABULARY_ID_DIAGNOSTIC_REPORT_CATEGORY;
 import static org.miracum.etl.fhirtoomop.Constants.SOURCE_VOCABULARY_ID_ECRF_PARAMETER;
 import static org.miracum.etl.fhirtoomop.Constants.SOURCE_VOCABULARY_ID_GENDER;
@@ -18,6 +19,7 @@ import static org.miracum.etl.fhirtoomop.Constants.VOCABULARY_ATC;
 import static org.miracum.etl.fhirtoomop.Constants.VOCABULARY_ICD10GM;
 import static org.miracum.etl.fhirtoomop.Constants.VOCABULARY_LOINC;
 import static org.miracum.etl.fhirtoomop.Constants.VOCABULARY_OPS;
+import static org.miracum.etl.fhirtoomop.Constants.VOCABULARY_ORPHA;
 import static org.miracum.etl.fhirtoomop.Constants.VOCABULARY_SNOMED;
 import static org.miracum.etl.fhirtoomop.Constants.VOCABULARY_UCUM;
 
@@ -33,7 +35,11 @@ import lombok.extern.slf4j.Slf4j;
 import org.hl7.fhir.r4.model.Coding;
 import org.miracum.etl.fhirtoomop.DbMappings;
 import org.miracum.etl.fhirtoomop.config.FhirSystems;
+import org.miracum.etl.fhirtoomop.model.AtcStandardDomainLookup;
 import org.miracum.etl.fhirtoomop.model.IcdSnomedDomainLookup;
+import org.miracum.etl.fhirtoomop.model.LoincStandardDomainLookup;
+import org.miracum.etl.fhirtoomop.model.OpsStandardDomainLookup;
+import org.miracum.etl.fhirtoomop.model.OrphaSnomedMapping;
 import org.miracum.etl.fhirtoomop.model.SnomedRaceStandardLookup;
 import org.miracum.etl.fhirtoomop.model.SnomedVaccineStandardLookup;
 import org.miracum.etl.fhirtoomop.model.omop.Concept;
@@ -55,7 +61,6 @@ public class FindOmopConcepts {
 
   @Autowired OmopConceptServiceImpl omopConceptService;
   @Autowired ResourceCheckDataAbsentReason checkDataAbsentReason;
-  @Autowired Boolean dictionaryLoadInRam;
 
   /**
    * Search for OMOP concept in CONCEPT table for FHIR code
@@ -71,11 +76,16 @@ public class FindOmopConcepts {
       Coding fhirCoding,
       @Nullable LocalDate resourceDate,
       Boolean bulkLoad,
-      DbMappings dbMappings) {
+      DbMappings dbMappings,
+      String fhirId) {
     if (fhirCoding == null || fhirCoding.isEmpty()) {
       return null;
     }
     var fhirCode = fhirCoding.getCode();
+    if (fhirCode == null) {
+      return null;
+    }
+
     var vocabularyId = getOmopVocabularyId(fhirCoding.getSystem());
     var fhirCodeVersion = getCodeVersion(fhirCoding);
     var codeValidDate = resourceDate == null ? null : getValidDate(fhirCodeVersion, resourceDate);
@@ -90,14 +100,14 @@ public class FindOmopConcepts {
     }
 
     Map<String, List<Concept>> allConcepts;
-    if (bulkLoad.equals(Boolean.TRUE) && dictionaryLoadInRam.equals(Boolean.TRUE)) {
+    if (bulkLoad.equals(Boolean.TRUE)) {
       allConcepts = dbMappings.getOmopConceptMapWrapper().getValidConcepts(vocabularyId);
     } else {
       allConcepts = omopConceptService.findValidConceptIdFromConceptCode(vocabularyId, fhirCode);
     }
 
     if (!allConcepts.containsKey(fhirCode)) {
-      log.info("Code [{}] is not mapped in OMOP. Set concept id to 0.", fhirCode);
+      log.info("Code [{}] of {} is not mapped in OMOP. Set concept id to 0.", fhirCode, fhirId);
       return defaultConcept(fhirCode, vocabularyId);
     }
 
@@ -105,15 +115,16 @@ public class FindOmopConcepts {
 
     if (codeValidDate == null) {
       return omopConcepts.get(0);
-    }
-    for (var concept : omopConcepts) {
-      if (!concept.getValidStartDate().isAfter(codeValidDate)
-          && !concept.getValidEndDate().isBefore(codeValidDate)) {
-        return concept;
+    } else {
+      for (var concept : omopConcepts) {
+        if (!concept.getValidStartDate().isAfter(codeValidDate)
+            && !concept.getValidEndDate().isBefore(codeValidDate)) {
+          return concept;
+        }
       }
     }
 
-    log.info("Code [{}] is not valid in OMOP.", fhirCode);
+    log.info("Code [{}] of {} is not valid in OMOP. Skip resource.", fhirCode, fhirId);
     return null;
   }
 
@@ -126,11 +137,8 @@ public class FindOmopConcepts {
    * @return a OMOP SOURCE_TO_CONCEPT_MAP model
    */
   public SourceToConceptMap getCustomConcepts(
-      Coding fhirCoding, String sourceVocabularyId, DbMappings dbMappings) {
-    if (fhirCoding == null) {
-      return null;
-    }
-    var fhirCode = fhirCoding.getCode();
+      String fhirCode, String sourceVocabularyId, DbMappings dbMappings) {
+
     var sourceToConceptMap = dbMappings.getFindHardCodeConcept();
 
     var omopCustomConcepts = sourceToConceptMap.get(sourceVocabularyId);
@@ -155,7 +163,11 @@ public class FindOmopConcepts {
    * @return a list of ICD_SNOMED_DOMAIN_LOOKUP models
    */
   public List<IcdSnomedDomainLookup> getIcdSnomedConcepts(
-      Coding icdCoding, LocalDate diagnoseOnsetDate, Boolean bulkLoad, DbMappings dbMappings) {
+      Coding icdCoding,
+      LocalDate diagnoseOnsetDate,
+      Boolean bulkLoad,
+      DbMappings dbMappings,
+      String fhirLogicId) {
     if (icdCoding.isEmpty()) {
       return Collections.emptyList();
     }
@@ -166,21 +178,12 @@ public class FindOmopConcepts {
 
     Map<String, List<IcdSnomedDomainLookup>> icdSnomedMap;
 
-    if (bulkLoad.equals(Boolean.TRUE) && dictionaryLoadInRam.equals(Boolean.TRUE)) {
+    if (bulkLoad.equals(Boolean.TRUE)) {
       icdSnomedMap = dbMappings.getFindIcdSnomedMapping();
     } else {
       icdSnomedMap = omopConceptService.getIcdSnomedMap(cleanIcdCode);
     }
 
-    var keySet = icdSnomedMap.keySet();
-    if (!keySet.contains(cleanIcdCode)) {
-      var defaultIcdSnomedDomainLookup =
-          defaultIcdSnomedDomainLookup(icdCoding, codeValidDate, bulkLoad, dbMappings);
-      if (defaultIcdSnomedDomainLookup == null) {
-        return Collections.emptyList();
-      }
-      return List.of(defaultIcdSnomedDomainLookup);
-    }
     for (var entry : icdSnomedMap.entrySet()) {
       var key = entry.getKey();
       if (key.equalsIgnoreCase(cleanIcdCode)) {
@@ -192,14 +195,21 @@ public class FindOmopConcepts {
             .collect(Collectors.toCollection(ArrayList::new));
       }
     }
-    return Collections.emptyList();
+    var defaultIcdSnomedDomainLookup =
+        defaultIcdSnomedDomainLookup(icdCoding, codeValidDate, bulkLoad, dbMappings, fhirLogicId);
+    if (defaultIcdSnomedDomainLookup == null) {
+      return Collections.emptyList();
+    }
+    return List.of(defaultIcdSnomedDomainLookup);
   }
 
   public List<SnomedVaccineStandardLookup> getSnomedVaccineConcepts(
       Coding snomedVaccineCoding,
       LocalDate vaccineOnsetDate,
       Boolean bulkLoad,
-      DbMappings dbMappings) {
+      DbMappings dbMappings,
+      String fhirLogicId,
+      String fhirId) {
     if (snomedVaccineCoding.isEmpty()) {
       return Collections.emptyList();
     }
@@ -219,16 +229,30 @@ public class FindOmopConcepts {
     for (var entry : snomedVaccineMap.entrySet()) {
       var key = entry.getKey();
       if (key.equalsIgnoreCase(snomedVaccineCode)) {
-        return entry.getValue().stream()
-            .filter(
-                snomedVaccine ->
-                    !snomedVaccine.getSnomedValidStartDate().isAfter(codeValidDate)
-                        && !snomedVaccine.getSnomedValidEndDate().isBefore(codeValidDate))
-            .collect(Collectors.toCollection(ArrayList::new));
+
+        var validVaccine =
+            entry.getValue().stream()
+                .filter(
+                    snomedVaccine ->
+                        !snomedVaccine.getSnomedValidStartDate().isAfter(codeValidDate)
+                            && !snomedVaccine.getSnomedValidEndDate().isBefore(codeValidDate))
+                .collect(Collectors.toCollection(ArrayList::new));
+
+        if (validVaccine.isEmpty()) {
+          // invalid SNOMED code
+          log.warn(
+              "SNOMED code [{}] of {} is not valid in OMOP. Skip resource",
+              snomedVaccineCode,
+              fhirId);
+          return Collections.emptyList();
+        } else {
+          return validVaccine;
+        }
       }
     }
     var defaultSnomedVaccineDomainLookup =
-        defaultSnomedVaccineDomainLookup(snomedVaccineCoding, codeValidDate, bulkLoad, dbMappings);
+        defaultSnomedVaccineDomainLookup(
+            snomedVaccineCoding, codeValidDate, bulkLoad, dbMappings, fhirId);
     if (defaultSnomedVaccineDomainLookup == null) {
       return Collections.emptyList();
     }
@@ -236,7 +260,7 @@ public class FindOmopConcepts {
   }
 
   public SnomedRaceStandardLookup getSnomedRaceConcepts(
-      Coding snomedRaceCoding, Boolean bulkLoad, DbMappings dbMappings) {
+      Coding snomedRaceCoding, Boolean bulkLoad, DbMappings dbMappings, String fhirLogicId) {
     if (snomedRaceCoding.isEmpty()) {
       return null;
     }
@@ -252,10 +276,374 @@ public class FindOmopConcepts {
     }
 
     if (!snomedRaceMap.containsKey(snomedRaceCode)) {
-      return defaultSnomedRaceDomainLookup(snomedRaceCoding, bulkLoad, dbMappings);
+      return defaultSnomedRaceDomainLookup(snomedRaceCoding, bulkLoad, dbMappings, fhirLogicId);
     }
 
     return snomedRaceMap.get(snomedRaceCode);
+  }
+
+  /**
+   * Search for OMOP concept in orpha_snomed_mapping table for Orpha code
+   *
+   * @param orphaCoding Orpha Coding element from FHIR resource
+   * @param diagnoseOnsetDate the date from FHIR resource
+   * @param bulkLoad parameter which indicates whether the Job should be run as bulk load or
+   *     incremental load
+   * @param dbMappings collections for the intermediate storage of data from OMOP CDM in RAM
+   * @param conditionLogicId logical id of the Condition FHIR resource
+   * @return a list of orpha_snomed_mapping models
+   */
+  public List<OrphaSnomedMapping> getOrphaSnomedConcepts(
+      Coding orphaCoding,
+      LocalDate diagnoseOnsetDate,
+      Boolean bulkLoad,
+      DbMappings dbMappings,
+      String conditionId) {
+    if (orphaCoding.isEmpty()) {
+      return Collections.emptyList();
+    }
+
+    String orphaCode = orphaCoding.getCode();
+    if (orphaCode == null) {
+      return Collections.emptyList();
+    }
+
+    String version = getCodeVersion(orphaCoding);
+    var codeValidDate = getValidDate(version, diagnoseOnsetDate);
+
+    Map<String, List<OrphaSnomedMapping>> orphaSnomedMap;
+
+    if (bulkLoad.equals(Boolean.TRUE)) {
+      orphaSnomedMap = dbMappings.getFindOrphaSnomedMapping();
+    } else {
+      orphaSnomedMap = omopConceptService.getOrphaSnomedMap(orphaCode);
+    }
+
+    for (var entry : orphaSnomedMap.entrySet()) {
+      var key = entry.getKey();
+      if (key.equalsIgnoreCase(orphaCode)) {
+        var orphaSnomedMapList = entry.getValue();
+
+        // check if Orpha code is valid
+        var validOrpha =
+            orphaSnomedMapList.stream()
+                .filter(
+                    orpha ->
+                        !orpha.getOrphaValidStartDate().isAfter(codeValidDate)
+                            && !orpha.getOrphaValidEndDate().isBefore(codeValidDate))
+                .collect(Collectors.toCollection(ArrayList::new));
+        if (validOrpha.isEmpty()) {
+          // invalid Orpha
+          log.warn(
+              "Orpha code [{}] of {} is not valid in OMOP. Skip resource.", orphaCode, conditionId);
+          return Collections.emptyList();
+        }
+
+        // check if Orpha to SNOMED mapping is valid
+        var validOrphaSnomed =
+            validOrpha.stream()
+                .filter(
+                    orpha ->
+                        !orpha.getMappingValidStartDate().isAfter(codeValidDate)
+                            && !orpha.getMappingValidEndDate().isBefore(codeValidDate))
+                .collect(Collectors.toCollection(ArrayList::new));
+
+        if (validOrphaSnomed.isEmpty()) {
+          // invalid Orpha to SNOMED mapping
+          log.info(
+              "Mapping of Orpha code [{}] of {} to Standard concept id is not valid in OMOP. Set concept id to 0.",
+              orphaCode,
+              conditionId);
+          var defaultInvalidOrphaSnomedMapping = defaultInvalidOrphaSnomedMap(validOrpha);
+          return List.of(defaultInvalidOrphaSnomedMapping);
+        }
+        // valid Orpha to SNOMED mapping
+        return validOrphaSnomed;
+      }
+    }
+    // Orpha code not in OMOP present
+    var defaultOrphaSnomedMapping = defaultOrphaSnomedMap(orphaCoding);
+    return List.of(defaultOrphaSnomedMapping);
+  }
+
+  /**
+   * Search for OMOP concept in OPS_STANDARD_DOMAIN_LOOKUP view for OPS code
+   *
+   * @param opsCoding OPS Coding element from FHIR resource
+   * @param procedureDate the date from FHIR resource
+   * @param bulkLoad parameter which indicates whether the Job should be run as bulk load or
+   *     incremental load
+   * @param dbMappings collections for the intermediate storage of data from OMOP CDM in RAM
+   * @param procedureId logical id of the Procedure FHIR resource
+   * @return a list of OPS_STANDARD_DOMAIN_LOOKUP models
+   */
+  public List<OpsStandardDomainLookup> getOpsStandardConcepts(
+      Coding opsCoding,
+      LocalDate procedureDate,
+      Boolean bulkLoad,
+      DbMappings dbMappings,
+      String procedureId) {
+    if (opsCoding.isEmpty()) {
+      return Collections.emptyList();
+    }
+
+    String opsCode = opsCoding.getCode();
+    if (opsCode == null) {
+      return Collections.emptyList();
+    }
+
+    String version = getCodeVersion(opsCoding);
+    var codeValidDate = getValidDate(version, procedureDate);
+
+    Map<String, List<OpsStandardDomainLookup>> opsStandardMap;
+
+    if (bulkLoad.equals(Boolean.TRUE)) {
+      opsStandardMap = dbMappings.getFindOpsStandardMapping();
+    } else {
+      opsStandardMap = omopConceptService.getOpsStandardMap(opsCode);
+    }
+
+    for (var entry : opsStandardMap.entrySet()) {
+      var key = entry.getKey();
+      if (key.equalsIgnoreCase(opsCode)) {
+        var opsStandardMapList = entry.getValue();
+
+        // check if OPS code is valid
+        var validOps =
+            opsStandardMapList.stream()
+                .filter(
+                    ops ->
+                        !ops.getSourceValidStartDate().isAfter(codeValidDate)
+                            && !ops.getSourceValidEndDate().isBefore(codeValidDate))
+                .collect(Collectors.toCollection(ArrayList::new));
+        if (validOps.isEmpty()) {
+          // invalid OPS
+          log.warn(
+              "OPS code [{}] of {} is not valid in OMOP. Skip resource.", opsCode, procedureId);
+          return Collections.emptyList();
+        }
+
+        // check if OPS to Standard mapping is valid
+        var validOpsStandard =
+            validOps.stream()
+                .filter(
+                    ops ->
+                        !ops.getMappingValidStartDate().isAfter(codeValidDate)
+                            && !ops.getMappingValidEndDate().isBefore(codeValidDate))
+                .collect(Collectors.toCollection(ArrayList::new));
+
+        if (validOpsStandard.isEmpty()) {
+          // invalid OPS to Standard mapping
+          log.info(
+              "Mapping of OPS code [{}] of {} to Standard concept id is not valid in OMOP. Set concept id to 0.",
+              opsCode,
+              procedureId);
+          var defaultInvalidOpsStandardMapping =
+              defaultOpsStandardDomainLookup(
+                  opsCoding, codeValidDate, bulkLoad, dbMappings, procedureId);
+          return List.of(defaultInvalidOpsStandardMapping);
+        }
+        // valid OPS to Standard mapping
+        return validOpsStandard;
+      }
+    }
+    // OPS code not present in ops_standard_domain_lookup
+    var defaultOpsStandardDomainLookup =
+        defaultOpsStandardDomainLookup(opsCoding, codeValidDate, bulkLoad, dbMappings, procedureId);
+    if (defaultOpsStandardDomainLookup == null) {
+      return Collections.emptyList();
+    }
+    return List.of(defaultOpsStandardDomainLookup);
+  }
+
+  /**
+   * Search for OMOP concept in ATC_STANDARD_DOMAIN_LOOKUP view for ATC code
+   *
+   * @param atcCoding ATC Coding element from FHIR resource
+   * @param medicationDate the date from FHIR resource
+   * @param bulkLoad parameter which indicates whether the Job should be run as bulk load or
+   *     incremental load
+   * @param dbMappings collections for the intermediate storage of data from OMOP CDM in RAM
+   * @param medicationId logical id of the MedicationAdministration or MedicationStatement FHIR
+   *     resource
+   * @return a list of ATC_STANDARD_DOMAIN_LOOKUP models
+   */
+  public List<AtcStandardDomainLookup> getAtcStandardConcepts(
+      Coding atcCoding,
+      LocalDate medicationDate,
+      Boolean bulkLoad,
+      DbMappings dbMappings,
+      String medicationId) {
+    if (atcCoding.isEmpty()) {
+      return Collections.emptyList();
+    }
+
+    String atcCode = atcCoding.getCode();
+    if (atcCode == null) {
+      return Collections.emptyList();
+    }
+
+    String version = getCodeVersion(atcCoding);
+    var codeValidDate = getValidDate(version, medicationDate);
+
+    Map<String, List<AtcStandardDomainLookup>> atcStandardMap;
+
+    if (bulkLoad.equals(Boolean.TRUE)) {
+      atcStandardMap = dbMappings.getFindAtcStandardMapping();
+    } else {
+      atcStandardMap = omopConceptService.getAtcStandardMap(atcCode);
+    }
+
+    for (var entry : atcStandardMap.entrySet()) {
+      var key = entry.getKey();
+      if (key.equalsIgnoreCase(atcCode)) {
+        var atcStandardMapList = entry.getValue();
+
+        // check if ATC code is valid
+        var validAtc =
+            atcStandardMapList.stream()
+                .filter(
+                    atc ->
+                        !atc.getSourceValidStartDate().isAfter(codeValidDate)
+                            && !atc.getSourceValidEndDate().isBefore(codeValidDate))
+                .collect(Collectors.toCollection(ArrayList::new));
+        if (validAtc.isEmpty()) {
+          // invalid ATC
+          log.warn(
+              "ATC code [{}] of {} is not valid in OMOP. Skip resource.", atcCode, medicationId);
+          return Collections.emptyList();
+        }
+
+        // check if ATC to Standard mapping is valid
+        var validAtcStandard =
+            validAtc.stream()
+                .filter(
+                    atc ->
+                        !atc.getMappingValidStartDate().isAfter(codeValidDate)
+                            && !atc.getMappingValidEndDate().isBefore(codeValidDate))
+                .collect(Collectors.toCollection(ArrayList::new));
+
+        if (validAtcStandard.isEmpty()) {
+          // invalid ATC to Standard mapping
+          log.info(
+              "Mapping of ATC code [{}] of {} to Standard concept id is not valid in OMOP. Set concept id to 0.",
+              atcCode,
+              medicationId);
+          var defaultInvalidAtcStandardMapping =
+              defaultAtcStandardDomainLookup(
+                  atcCoding, codeValidDate, bulkLoad, dbMappings, medicationId);
+          return List.of(defaultInvalidAtcStandardMapping);
+        }
+        // valid ATC to Standard mapping
+        return validAtcStandard;
+      }
+    }
+    // ATC code not present in atc_standard_domain_lookup
+    var defaultAtcStandardDomainLookup =
+        defaultAtcStandardDomainLookup(
+            atcCoding, codeValidDate, bulkLoad, dbMappings, medicationId);
+    if (defaultAtcStandardDomainLookup == null) {
+      return Collections.emptyList();
+    }
+    return List.of(defaultAtcStandardDomainLookup);
+  }
+
+  /**
+   * Search for OMOP concept in LOINC_STANDARD_DOMAIN_LOOKUP view for LOINC code
+   *
+   * @param loincCoding LOINC Coding element from FHIR resource
+   * @param observationDate the date from FHIR resource
+   * @param bulkLoad parameter which indicates whether the Job should be run as bulk load or
+   *     incremental load
+   * @param dbMappings collections for the intermediate storage of data from OMOP CDM in RAM
+   * @param observationId logical id of the Observation FHIR resource
+   * @return a list of LOINC_STANDARD_DOMAIN_LOOKUP models
+   */
+  public List<LoincStandardDomainLookup> getLoincStandardConcepts(
+      Coding loincCoding,
+      LocalDate observationDate,
+      Boolean bulkLoad,
+      DbMappings dbMappings,
+      String observationId) {
+    if (loincCoding.isEmpty()) {
+      return Collections.emptyList();
+    }
+
+    String loincCode = loincCoding.getCode();
+    if (loincCode == null) {
+      return Collections.emptyList();
+    }
+
+    String version = getCodeVersion(loincCoding);
+    var codeValidDate = getValidDate(version, observationDate);
+
+    Map<String, List<LoincStandardDomainLookup>> loincStandardMap;
+
+    if (bulkLoad.equals(Boolean.TRUE)) {
+      loincStandardMap = dbMappings.getFindLoincStandardMapping();
+    } else {
+      loincStandardMap = omopConceptService.getLoincStandardMap(loincCode);
+    }
+
+    for (var entry : loincStandardMap.entrySet()) {
+      var key = entry.getKey();
+      if (key.equalsIgnoreCase(loincCode)) {
+        var loincStandardMapList = entry.getValue();
+
+        // check if LOINC code is valid
+        var validLoinc =
+            loincStandardMapList.stream()
+                .filter(
+                    loinc ->
+                        !loinc.getSourceValidStartDate().isAfter(codeValidDate)
+                            && !loinc.getSourceValidEndDate().isBefore(codeValidDate))
+                // if required: check only for invalid_reason is not "U"
+                .collect(Collectors.toCollection(ArrayList::new));
+        if (validLoinc.isEmpty()) {
+          // if required: check if invalid_reason = "U"
+          // false -> Skip resource
+          // true -> Check mapping validity
+
+          // invalid LOINC
+          log.warn(
+              "LOINC code [{}] of {} is not valid in OMOP. Skip resource.",
+              loincCode,
+              observationId);
+          return Collections.emptyList();
+        }
+
+        // check if LOINC to Standard mapping is valid
+        var validLoincStandard =
+            validLoinc.stream()
+                .filter(
+                    loinc ->
+                        !loinc.getMappingValidStartDate().isAfter(codeValidDate)
+                            && !loinc.getMappingValidEndDate().isBefore(codeValidDate))
+                .collect(Collectors.toCollection(ArrayList::new));
+
+        if (validLoincStandard.isEmpty()) {
+          // invalid LOINC to Standard mapping
+          log.info(
+              "Mapping of LOINC code [{}] of {} to Standard concept id is not valid in OMOP. Set concept id to 0.",
+              loincCode,
+              observationId);
+          var defaultInvalidLoincStandardMapping =
+              defaultLoincStandardDomainLookup(
+                  loincCoding, codeValidDate, bulkLoad, dbMappings, observationId);
+          return List.of(defaultInvalidLoincStandardMapping);
+        }
+        // valid LOINC to Standard mapping
+        return validLoincStandard;
+      }
+    }
+    // LOINC code not present in loinc_standard_domain_lookup
+    var defaultLoincStandardDomainLookup =
+        defaultLoincStandardDomainLookup(
+            loincCoding, codeValidDate, bulkLoad, dbMappings, observationId);
+    if (defaultLoincStandardDomainLookup == null) {
+      return Collections.emptyList();
+    }
+    return List.of(defaultLoincStandardDomainLookup);
   }
 
   /**
@@ -284,6 +672,8 @@ public class FindOmopConcepts {
         return VOCABULARY_UCUM;
       case ICD10GM:
         return VOCABULARY_ICD10GM;
+      case ORPHA:
+        return VOCABULARY_ORPHA;
       case GENDERAMTLICHDEEXTENSION:
         return SOURCE_VOCABULARY_ID_GENDER;
       case PROCEDURESITELOCALIZATION:
@@ -314,12 +704,12 @@ public class FindOmopConcepts {
     if (versionElement.isEmpty()) {
       return null;
     }
-    var opsVersion = checkDataAbsentReason.getValue(versionElement);
+    var version = checkDataAbsentReason.getValue(versionElement);
 
-    if (Strings.isNullOrEmpty(opsVersion)) {
+    if (Strings.isNullOrEmpty(version)) {
       return null;
     }
-    return opsVersion;
+    return version;
   }
 
   /**
@@ -345,31 +735,27 @@ public class FindOmopConcepts {
   }
 
   /**
-   * Default OMOP SOURCE_TO_CONCEPT_MAP model, when the code from FHIR resource is not exits in OMOP
+   * Default OMOP SOURCE_TO_CONCEPT_MAP model, when the code from FHIR resource is not exist in OMOP
    *
    * @param fhirCode code from FHIR resource
    * @param vocabularyId vocabulary Id in OMOP based on the used system URL in Coding
    * @return the default OMOP SOURCE_TO_CONCEPT_MAP model
    */
   private SourceToConceptMap defaultSourceToConceptMap(String fhirCode, String vocabularyId) {
-
-    if (!Strings.isNullOrEmpty(vocabularyId)) {
-      var defaultSourceToConceptMap = SourceToConceptMap.builder().sourceCode(fhirCode).build();
-      if (vocabularyId.equals(SOURCE_VOCABULARY_ID_OBSERVATION_CATEGORY)
-          || vocabularyId.equals(SOURCE_VOCABULARY_ID_DIAGNOSTIC_REPORT_CATEGORY)) {
-        defaultSourceToConceptMap.setTargetConceptId(CONCEPT_EHR);
-      }
-      return defaultSourceToConceptMap;
-    } else {
-      return SourceToConceptMap.builder()
-          .sourceCode(fhirCode)
-          .targetConceptId(CONCEPT_NO_MATCHING_CONCEPT)
-          .build();
+    var defaultSourceToConceptMap =
+        SourceToConceptMap.builder()
+            .sourceCode(fhirCode)
+            .targetConceptId(CONCEPT_NO_MATCHING_CONCEPT)
+            .build();
+    if (SOURCE_VOCABULARY_ID_OBSERVATION_CATEGORY.equals(vocabularyId)
+        || SOURCE_VOCABULARY_ID_DIAGNOSTIC_REPORT_CATEGORY.equals(vocabularyId)) {
+      defaultSourceToConceptMap.setTargetConceptId(CONCEPT_EHR);
     }
+    return defaultSourceToConceptMap;
   }
 
   /**
-   * Default OMOP CONCEPT model, when the code from FHIR resource is not exits in OMOP
+   * Default OMOP CONCEPT model, when the code from FHIR resource is not exist in OMOP
    *
    * @param fhirCode code from FHIR resource
    * @param vocabularyId vocabulary Id in OMOP based on the used system URL in Coding
@@ -388,8 +774,16 @@ public class FindOmopConcepts {
     if (vocabularyId.equals(VOCABULARY_LOINC) || vocabularyId.equals(VOCABULARY_SNOMED)) {
       defaultConcept.setDomainId(OMOP_DOMAIN_OBSERVATION);
     }
-    if (vocabularyId.equals(VOCABULARY_ICD10GM)) {
+    if (vocabularyId.equals(VOCABULARY_ICD10GM) || vocabularyId.equals(VOCABULARY_ORPHA)) {
       defaultConcept.setDomainId(OMOP_DOMAIN_CONDITION);
+    }
+
+    if (vocabularyId.equals(VOCABULARY_OPS)) {
+      defaultConcept.setDomainId(OMOP_DOMAIN_PROCEDURE);
+    }
+
+    if (vocabularyId.equals(VOCABULARY_ATC)) {
+      defaultConcept.setDomainId(OMOP_DOMAIN_DRUG);
     }
 
     return defaultConcept;
@@ -404,7 +798,7 @@ public class FindOmopConcepts {
   }
 
   /**
-   * Default OMOP ICD_SNOMED_DOMAIN_LOOKUP model, when the code from FHIR resource is not exits in
+   * Default OMOP ICD_SNOMED_DOMAIN_LOOKUP model, when the code from FHIR resource does not exist in
    * OMOP
    *
    * @param fhirCode code from FHIR resource
@@ -412,8 +806,12 @@ public class FindOmopConcepts {
    * @return the default OMOP ICD_SNOMED_DOMAIN_LOOKUP model
    */
   private IcdSnomedDomainLookup defaultIcdSnomedDomainLookup(
-      Coding icdCoding, LocalDate diagnoseOnsetDate, Boolean bulkLoad, DbMappings dbMappings) {
-    var omopConcept = getConcepts(icdCoding, diagnoseOnsetDate, bulkLoad, dbMappings);
+      Coding icdCoding,
+      LocalDate diagnoseOnsetDate,
+      Boolean bulkLoad,
+      DbMappings dbMappings,
+      String fhirId) {
+    var omopConcept = getConcepts(icdCoding, diagnoseOnsetDate, bulkLoad, dbMappings, fhirId);
     if (omopConcept == null) {
       return null;
     }
@@ -421,7 +819,6 @@ public class FindOmopConcepts {
         .icdGmCode(icdCoding.getCode())
         .icdGmConceptId(omopConcept.getConceptId())
         .snomedConceptId(CONCEPT_NO_MATCHING_CONCEPT)
-        //        .snomedDomainId(OMOP_DOMAIN_CONDITION)
         .snomedDomainId(omopConcept.getDomainId())
         .icdGmValidStartDate(omopConcept.getValidStartDate())
         .icdGmValidEndDate(omopConcept.getValidEndDate())
@@ -429,8 +826,8 @@ public class FindOmopConcepts {
   }
 
   /**
-   * Default OMOP SNOMED_VACCINE_DOMAIN_LOOKUP model, when the code from FHIR resource is not exits
-   * in OMOP
+   * Default OMOP SNOMED_VACCINE_DOMAIN_LOOKUP model, when the code from FHIR resource does not
+   * exist in OMOP
    *
    * @param fhirCode code from FHIR resource
    * @param vocabularyId vocabulary Id in OMOP based on the used system URL in Coding
@@ -440,8 +837,10 @@ public class FindOmopConcepts {
       Coding snomedVaccineCoding,
       LocalDate vaccineOnsetDate,
       Boolean bulkLoad,
-      DbMappings dbMappings) {
-    var omopConcept = getConcepts(snomedVaccineCoding, vaccineOnsetDate, bulkLoad, dbMappings);
+      DbMappings dbMappings,
+      String fhirId) {
+    var omopConcept =
+        getConcepts(snomedVaccineCoding, vaccineOnsetDate, bulkLoad, dbMappings, fhirId);
     if (omopConcept == null) {
       return null;
     }
@@ -454,15 +853,15 @@ public class FindOmopConcepts {
   }
 
   /**
-   * Default OMOP SNOMED_RACE_DOMAIN_LOOKUP model, when the code from FHIR resource is not exits in
-   * OMOP
+   * Default OMOP SNOMED_RACE_DOMAIN_LOOKUP model, when the code from FHIR resource does not exist
+   * in OMOP
    *
    * @param fhirCode code from FHIR resource
    * @return the default OMOP SNOMED_RACE_DOMAIN_LOOKUP model
    */
   private SnomedRaceStandardLookup defaultSnomedRaceDomainLookup(
-      Coding snomedRaceCoding, Boolean bulkLoad, DbMappings dbMappings) {
-    var raceConcept = getConcepts(snomedRaceCoding, null, bulkLoad, dbMappings);
+      Coding snomedRaceCoding, Boolean bulkLoad, DbMappings dbMappings, String fhirId) {
+    var raceConcept = getConcepts(snomedRaceCoding, null, bulkLoad, dbMappings, fhirId);
     if (raceConcept == null) {
       return null;
     }
@@ -470,6 +869,117 @@ public class FindOmopConcepts {
         .snomedCode(snomedRaceCoding.getCode())
         .snomedConceptId(raceConcept.getConceptId())
         .standardRaceConceptId(CONCEPT_NO_MATCHING_CONCEPT)
+        .build();
+  }
+
+  /**
+   * Default OMOP orpha_snomed_mapping model, when the code from FHIR resource does not exist in
+   * OMOP
+   *
+   * @param orphaCoding Orpha code from FHIR resource
+   * @return the default OMOP orpha_snomed_mapping model
+   */
+  private OrphaSnomedMapping defaultOrphaSnomedMap(Coding orphaCoding) {
+
+    return OrphaSnomedMapping.builder()
+        .orphaCode(orphaCoding.getCode())
+        .orphaConceptId(CONCEPT_NO_MATCHING_CONCEPT)
+        .snomedConceptId(CONCEPT_NO_MATCHING_CONCEPT)
+        .snomedDomainId(OMOP_DOMAIN_CONDITION)
+        .build();
+  }
+
+  /**
+   * Default OMOP orpha_snomed_mapping model, when the mapping between Orpha and SNOMED is invalid
+   *
+   * @param orphaCoding Orpha code from FHIR resource
+   * @return the default OMOP orpha_snomed_mapping model
+   */
+  private OrphaSnomedMapping defaultInvalidOrphaSnomedMap(
+      List<OrphaSnomedMapping> orphaSnomedMapList) {
+    var orphaSnomedMap = orphaSnomedMapList.get(0);
+
+    return OrphaSnomedMapping.builder()
+        .orphaCode(orphaSnomedMap.getOrphaCode())
+        .orphaConceptId(orphaSnomedMap.getOrphaConceptId())
+        .snomedConceptId(CONCEPT_NO_MATCHING_CONCEPT)
+        .snomedDomainId(OMOP_DOMAIN_CONDITION)
+        .build();
+  }
+
+  /**
+   * Default ops_standard_domain_lookup model, when the code from FHIR resource is not present in
+   * ops_standard_domain_lookup or concept or if the mapping between OPS and Standard is not valid.
+   *
+   * @param opsCoding OPS Coding element from FHIR resource
+   * @return the default OMOP ops_standard_domain_lookup model
+   */
+  private OpsStandardDomainLookup defaultOpsStandardDomainLookup(
+      Coding opsCoding,
+      LocalDate procedureDate,
+      Boolean bulkLoad,
+      DbMappings dbMappings,
+      String fhirId) {
+    var omopConcept = getConcepts(opsCoding, procedureDate, bulkLoad, dbMappings, fhirId);
+    if (omopConcept == null) {
+      return null;
+    }
+    return OpsStandardDomainLookup.builder()
+        .sourceCode(opsCoding.getCode())
+        .sourceConceptId(omopConcept.getConceptId())
+        .standardConceptId(CONCEPT_NO_MATCHING_CONCEPT)
+        .standardDomainId(omopConcept.getDomainId())
+        .build();
+  }
+
+  /**
+   * Default atc_standard_domain_lookup model, when the code from FHIR resource is not present in
+   * atc_standard_domain_lookup or concept or if the mapping between ATC and Standard is not valid.
+   *
+   * @param atcCoding ATC Coding element from FHIR resource
+   * @return the default OMOP atc_standard_domain_lookup model
+   */
+  private AtcStandardDomainLookup defaultAtcStandardDomainLookup(
+      Coding atcCoding,
+      LocalDate medicationDate,
+      Boolean bulkLoad,
+      DbMappings dbMappings,
+      String fhirId) {
+    var omopConcept = getConcepts(atcCoding, medicationDate, bulkLoad, dbMappings, fhirId);
+    if (omopConcept == null) {
+      return null;
+    }
+    return AtcStandardDomainLookup.builder()
+        .sourceCode(atcCoding.getCode())
+        .sourceConceptId(omopConcept.getConceptId())
+        .standardConceptId(CONCEPT_NO_MATCHING_CONCEPT)
+        .standardDomainId(omopConcept.getDomainId())
+        .build();
+  }
+
+  /**
+   * Default loinc_standard_domain_lookup model, when the code from FHIR resource is not present in
+   * loinc_standard_domain_lookup or concept or if the mapping between LOINC and Standard is not
+   * valid.
+   *
+   * @param loincCoding LOINC Coding element from FHIR resource
+   * @return the default OMOP loinc_standard_domain_lookup model
+   */
+  private LoincStandardDomainLookup defaultLoincStandardDomainLookup(
+      Coding loincCoding,
+      LocalDate observationDate,
+      Boolean bulkLoad,
+      DbMappings dbMappings,
+      String fhirId) {
+    var omopConcept = getConcepts(loincCoding, observationDate, bulkLoad, dbMappings, fhirId);
+    if (omopConcept == null) {
+      return null;
+    }
+    return LoincStandardDomainLookup.builder()
+        .sourceCode(loincCoding.getCode())
+        .sourceConceptId(omopConcept.getConceptId())
+        .standardConceptId(CONCEPT_NO_MATCHING_CONCEPT)
+        .standardDomainId(omopConcept.getDomainId())
         .build();
   }
 }
